--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  if user
+    div.jumbotron.my-4
+      h1.display-4 えくすたーなるとぅいったー
+      p.lead えくすたーなるとぅいったーはツイッターの検索機能を使ってウェブページ上からツイートを見れるアプリケーションです。
+      p.lead お気に入りのツイートは保存することができます。（ツイッター上ではツイ消しされている可能性あり）
+      p.lead 開発時間がおしてる（技術不足と言う）ため、お気に入り登録時の確認アラートは実装出来ましたが、削除時の確認アラートは実装できませんでした。
