Herokuの環境変数を利用できるように修正

--- a/views/result.pug
+++ b/views/result.pug
@@ -50,3 +50,4 @@ block content
             =(tweet.extended_entities && tweet.extended_entities.media && tweet.extended_entities.media[0].video_info == undefined) ?
             imgColle : ''
           ).form-button.btn.btn-outline-info.mx-2 お気に入り
+    p.to-top ↑
