--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,3 +11,19 @@ img, video {
   user-select:none;
   -webkit-touch-callout:none;
 }
+
+.to-top{
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  right: 0;
+  bottom: 0;
+  font-size: 50px;
+  font-weight: bold;
+  color: rgb(0, 127, 231);
+  background: rgb(51, 50, 50);
+  cursor: pointer;
+}
