Herokuの環境変数を利用できるように修正

--- a/views/favorite.pug
+++ b/views/favorite.pug
@@ -36,3 +36,4 @@ block content
               form(method="post" action=`/tweets/${favorite.twId}?delete=1`)
                 input(type="hidden" name="_csrf" value!=csrfToken)
                 button(type="submit").btn.btn-outline-danger お気に入りから削除
+        p.to-top ⇧
