--- a/views/result.pug
+++ b/views/result.pug
@@ -18,9 +18,9 @@ block content
           if twiStr.match(regularExpressionAtMedia) || twiStr.match(regularExpressionAtHashtag)
             - let newStr = twiStr.replace(regularExpressionAtMedia, '').replace(regularExpressionAtHashtag, '')
             h6 画像、動画、リンク、またはタグ付きのツイート
-            h4 #{newStr}
+            h4(style="white-space:pre;") #{newStr}
           else
-            h4 #{twiStr}
+            h4(style="white-space:pre;") #{twiStr}
           if tweet.extended_entities
             if tweet.extended_entities.media[0].video_info
               - let regularExpressionAt = /.m3u8/g
